--- a/frontend/src/components/upload-image/image-modal.css
+++ b/frontend/src/components/upload-image/image-modal.css
@@ -22,6 +22,7 @@
     height: 50px;
     background: #fff;
     position: relative;
+    flex-shrink: 0;
 }
 
 .modal-edit-image .button-resize {
@@ -46,9 +47,13 @@
 }
 
 .modal-edit-image .modal-body .image-area {
-    flex-grow: 1;
+    height: 100%;
     position: relative;
     display: flex;
+}
+
+.modal-edit-image .modal-body .image-area .icon-loader {
+    margin: auto;
 }
 
 .modal-edit-image .modal-body .image-preview
@@ -63,10 +68,10 @@
     max-width: 100%;
 }
 
-/*.modal-edit-image .modal-body .ReactCrop,
+.modal-edit-image .modal-body .ReactCrop,
 .modal-edit-image .modal-body .ReactCrop__image
 {
-    max-height: calc(100vh - 170px);
+    max-height: calc(100vh - 100px);
     margin: auto;
 }
 
@@ -74,8 +79,8 @@
 
     .modal-edit-image .modal-body .ReactCrop,
     .modal-edit-image .modal-body .ReactCrop__image
-     {
+    {
         max-height: calc(90vh - 100px);
     }
 
-}*/
+}
