--- a/frontend/src/components/upload-image/image-modal.css
+++ b/frontend/src/components/upload-image/image-modal.css
@@ -9,7 +9,7 @@
     width: 100%;
 }
 
-/*
+
 @media screen and (min-width: 768px) {
     
     .modal-edit-image {
@@ -25,7 +25,7 @@
     }
     
 }
-*/
+
 
 .modal-edit-image .modal-body {
     background: #222;
@@ -60,7 +60,7 @@
 }
 
 .modal-edit-image .modal-body .image-area {
-    height: 100%;
+    height: calc(100% - 50px);
     position: relative;
     display: flex;
 }
@@ -81,19 +81,13 @@
     max-width: 100%;
 }
 
-.modal-edit-image .modal-body .ReactCrop,
+.modal-edit-image .modal-body .ReactCrop {
+    height: 100%;
+    width: 100%;
+
+}
 .modal-edit-image .modal-body .ReactCrop__image
 {
-    max-height: 100%;
-    margin: auto;
-}
-
-@media screen and (min-width: 768px) {
-
-    .modal-edit-image .modal-body .ReactCrop,
-    .modal-edit-image .modal-body .ReactCrop__image
-    {
-        max-height: 100%;
-    }
-
+    height: 100%;
+    width: 100%;
 }
