--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,18 @@
 html,
 body {
     height: 100%;
+}
+
+.no-scroll {
     overflow: hidden;
+}
+
+@media screen and (min-width: 768px) {
+
+    .no-scroll {
+        overflow: auto;
+    }
+
 }
 
 body {
