--- a/frontend/src/components/modals/new-offer.css
+++ b/frontend/src/components/modals/new-offer.css
@@ -17,10 +17,6 @@
     margin-bottom: 3px;
 }
 
-.modal-new-post-photo .modal-header .modal-title {
-    vertical-align: top;
-    margin-left: 10px;
-}
 
 .modal-new-post-photo .button-add-photo {
     margin: auto;
@@ -67,10 +63,43 @@
     background: rgba(34, 34, 34, 0.7) !important;
 }
 
-/* #########################
-# post-compoer
-######################### */
-/*
-.post-composer {
-    min-height: 46px;
-}*/
+/* TOOLTIPS */
+
+.help-block-wrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    padding: 0 20px;
+}
+
+@media screen and (min-width: 768px) {
+    .help-block-wrapper {
+        padding: 0 40px;
+    }
+}
+
+.help-block-wrapper .help-block {
+    margin: 10% auto;
+    padding: 0;
+    list-style-type: none;
+}
+
+.help-block__header {
+    color: #777;
+    padding: 8px 0;
+    margin-bottom: 10px;
+    border-bottom: 1px solid #f949b6;
+}
+
+.help-block__content {
+    color: #333;
+    font-size: 1.1em;
+}
+
+.tooltip-list {
+    margin-bottom: 30px;
+}
+
+.tooltip-list > li {
+    margin-bottom: 10px;
+}
