--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -165,11 +165,6 @@ body {
     vertical-align: middle;
 }
 
-.title-icon {
-    width: 50px;
-    height: 50px;
-}
-
 /* MODALS */
 
 .modal-dialog {
@@ -205,6 +200,19 @@ body {
     text-align: center;
     height: 50px;
     font-size: 1.2em;
+}
+
+.modal-header .title-icon {
+    width: 20px;
+    height: 20px;
+    vertical-align: top;
+    margin: 0 15px;
+}
+
+.modal-header .title-text {
+    font-size: 1em;
+    line-height: 22px;
+    vertical-align: top;
 }
 
 .modal-header .close {
@@ -336,4 +344,17 @@ svg.icon-mars {
 
 svg.icon-venus {
     fill: #f378ac;
+}
+
+
+/* HASHTAG */
+
+.hashtag {
+    color: #01579B;
+    padding: 0 2px;
+}
+
+
+.hashtag:before {
+    content: '#';
 }
