--- a/frontend/src/components/thread/offer-thread.css
+++ b/frontend/src/components/thread/offer-thread.css
@@ -174,6 +174,20 @@
     cursor: pointer;
 }
 
+.chat-thread .button-show-more {
+    width: 100%;
+    padding: 10px;
+    font-size: 1.2em;
+    color: #777;
+    text-align: center;
+}
+
+.chat-thread .button-show-more > button {
+    border: 1px solid #f949b6;
+    border-radius: 30px;
+    padding: 6px 12px;
+}
+
 /*USER THREAD*/
 
 .post-user-item {
