--- a/frontend/src/components/thread/offer-thread.css
+++ b/frontend/src/components/thread/offer-thread.css
@@ -176,7 +176,7 @@
 
 .chat-thread .button-show-more {
     width: 100%;
-    padding: 10px;
+    padding: 10px 30px;
     font-size: 1.2em;
     color: #777;
     text-align: center;
@@ -185,7 +185,8 @@
 .chat-thread .button-show-more > button {
     border: 1px solid #f949b6;
     border-radius: 30px;
-    padding: 6px 12px;
+    padding: 3px;
+    width: 100%;
 }
 
 /*USER THREAD*/
