--- a/frontend/src/components/LoginPage/login-page.css
+++ b/frontend/src/components/LoginPage/login-page.css
@@ -3,6 +3,7 @@
     width: 100%;
     display: flex;
     /* padding: 0; */
+    background: #fff;
 }
 
 .login-page {
@@ -73,10 +74,6 @@
     font-size: 1.7em;
 }
 
-.slogan span {
-    vertical-align: middle;
-}
-
 .find-link {
     border: 1px solid rgb(249, 73, 182);
     border-radius: 30px;
@@ -101,6 +98,7 @@
     height: 100%;
     width: 100%;
     min-height: 360px;
+    max-width: 320px;
     /*padding-top: 10%;*/
     overflow: auto;
     display: flex;
@@ -114,16 +112,17 @@
     text-align: center;
 }
 
-.form-header img {
+.form-header .logo {
     width: 44px;
     height: 44px;
     margin-right: 16px;
 }
 
-.form-header h3 {
-    display: inline;
-    vertical-align: middle;
+.form-header .site-name {
+    height: 25px;
 }
+
+
 
 .form-wrapper .input-round {
     width: 82%;
