--- a/frontend/src/components/LoginPage/login-page.css
+++ b/frontend/src/components/LoginPage/login-page.css
@@ -71,17 +71,35 @@
 }
 
 .slogan {
-    font-size: 1.7em;
+    font-size: 2.2em;
+    color: #555;
+}
+
+.slogan-appear {
+    opacity: 0;
+}
+
+.slogan-appear.slogan-appear-active {
+    opacity: 1;
+    transition: opacity 1.1s ease-in;
+}
+
+.slogan-appear.slogan-appear-active.slogan-wave-1 {
+    transition-delay: 0.2s;
+}
+
+.slogan-appear.slogan-appear-active.slogan-wave-2 {
+    transition-delay: 1.2s;
+}
+
+.slogan-appear.slogan-appear-active.slogan-wave-3 {
+    transition-delay: 2s;
 }
 
 .find-link {
-    border: 1px solid rgb(249, 73, 182);
-    border-radius: 30px;
+    border-bottom: 1px solid rgb(249, 73, 182);
     color: rgb(249, 73, 182) !important;
-    padding: 2px 26px;
-    margin: 0 22px 0 0;
-    outline: none;
-    vertical-align: middle;
+    outline: none !important;
     text-decoration: none !important;
 }
 
