--- a/frontend/src/components/LoginPage/login-page.css
+++ b/frontend/src/components/LoginPage/login-page.css
@@ -17,6 +17,10 @@
     overflow-y: hidden;
 }
 
+.login-page span.joinus {
+    color: #999;
+}
+
 .toggle-area {
     transition: all .3s ease-out;
     overflow: hidden;
@@ -154,6 +158,14 @@
     height: 70px;
     padding-top: 21px;
     text-align: center;
+}
+
+.buttons a {
+    margin: 0 8px;
+}
+
+.buttons a img {
+    height: 30px;
 }
 
 .buttons .input-round {
