--- a/frontend/src/components/UserPage/user-page.css
+++ b/frontend/src/components/UserPage/user-page.css
@@ -90,24 +90,51 @@
 .col-avatar {
     display: flex;
     padding: 14px;
+    position: relative;
 }
 
-.col-avatar .avatar {
+.col-avatar .avatar,
+.col-avatar .button-new-avatar button {
     width: 190px;
     height: 190px;
     margin: auto;
 }
 
+.col-avatar .button-new-avatar {
+    color: #fff;
+    font-size: 4em;
+    position: absolute;
+    background: none;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.col-avatar .button-new-avatar button {
+    z-index: 100;
+    opacity: 0.3;
+    border-radius: 50%;
+    transition: all 0.5s ease-out;
+}
+
+.col-avatar .button-new-avatar button:hover {
+    opacity: 1;
+    background: rgba(0,0,0,0.3) !important;
+}
+
 
 @media screen and (min-width: 768px) {
 
-    .col-avatar .avatar {
-        width: 130px;
-        height: 130px;
-    }
-
     .col-avatar {
         height: 190px;
+    }
+
+    .col-avatar .avatar,
+    .col-avatar .button-new-avatar button {
+        width: 130px;
+        height: 130px;
     }
 
 }
