--- a/frontend/src/components/Menu/menu.css
+++ b/frontend/src/components/Menu/menu.css
@@ -1,7 +1,7 @@
 .main-menu {
     margin: 0;
     list-style-type: none;
-    padding: 44px 0 0 12px;
+    padding: 25px 0 0 12px;
     
 }
 
@@ -28,6 +28,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 0 40px;
+    box-shadow: 0px -1px 2px rgba(200,200,200,0.5);
 }
 
 @media screen and (min-width: 768px) {
