--- a/frontend/src/components/thread/photo-thread.css
+++ b/frontend/src/components/thread/photo-thread.css
@@ -58,3 +58,31 @@
     padding: 10px;
     position: relative;
 }
+
+.photo-thread .new-photo {
+    border: 2px solid #aaa;
+    max-width: 250px;
+    background: #444;
+    /*max-width: 450px;*/
+    border-radius: 30px;
+    display: block;
+    text-align: center;
+    margin: 20px 10px;
+    padding: 2px;
+}
+
+.photo-thread .new-photo:hover {
+    border-color: #f949b6;
+}
+
+.photo-thread .new-photo img {
+    height: 2em;
+    width: 2em;
+    margin-right: 1em;
+}
+
+.photo-thread .new-photo span {
+    vertical-align: middle;
+    font-size: 1.2em;
+    color: #ddd;
+}
