--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -414,3 +414,30 @@ svg.icon-venus {
 .avatar-cropper .cropper-face {
     border-radius: 50%;
 }
+
+
+.fade-appear,
+.fade-enter {
+    opacity: 0;
+    width: 100%;
+    position: absolute;
+    z-index: 2;
+}
+
+.fade-appear.fade-appear-active,
+.fade-enter.fade-enter-active {
+    opacity: 1;
+    transition: opacity .7s ease-out;
+}
+
+.fade-leave {
+    opacity: 1;
+    width: 100%;
+    display: inline-block;
+    position: absolute;
+}
+
+.fade-leave.fade-leave-active {
+    opacity: 0;
+    transition: opacity .7s ease-out;
+}
