--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,6 +37,7 @@ body {
 
 .main-container {
     max-width: 970px;
+    /*max-width: 1280px;*/
     margin: auto;
 }
 
@@ -45,7 +46,7 @@ body {
 .col-menu {
     display: none;
     height: 190px;
-    /* border: 1px solid black; */
+    /*border: 1px solid black; */
     padding: 0;
 }
 
