--- a/frontend/src/components/Menu/menu.css
+++ b/frontend/src/components/Menu/menu.css
@@ -27,7 +27,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 40px;
+    padding: 0 20px;
     box-shadow: 0px -1px 2px rgba(200,200,200,0.5);
 }
 
@@ -40,6 +40,12 @@
 .menu-link {
     color: #555;
     fill: #888;
+    display: block;
+}
+
+.mobile-main-menu .menu-link {
+    flex-grow: 1;
+    text-align: center;
 }
 
 .menu-link .icon {
