--- a/frontend/src/components/thread/offer-thread.css
+++ b/frontend/src/components/thread/offer-thread.css
@@ -5,25 +5,16 @@
     color: #aaa;
 }
 
-.post-offer-wrapper {
-    background: #fff;
-    border: 1px solid #dfdfdf;
-    margin-bottom: 8px;
-}
-
 .post-offer-item {
     padding: 20px 12px 10px 68px;
 }
 
 @media screen and (min-width: 768px) {
-    
-    .post-offer-wrapper {
-        margin-bottom: 18px;
-    }
-    
+
     .post-offer-item {
-        padding: 20px 22px 10px 80px;        
+        padding: 20px 22px 10px 80px;
     }
+
 }
 
 .post-offer-item .avatar {
@@ -70,6 +61,23 @@
     display: block;
 }
 
+
+/* POST OFFER WRAPPER */
+
+.post-offer-wrapper {
+    background: #fff;
+    border: 1px solid #dfdfdf;
+    margin-bottom: 8px;
+}
+
+@media screen and (min-width: 768px) {
+    
+    .post-offer-wrapper {
+        margin-bottom: 18px;
+    }
+
+}
+
 .post-offer-wrapper .button-area {
     width: 100%;
     text-align: center;
@@ -85,12 +93,12 @@
     height: 20px;
     width: 20px;
     margin-right: 15px;
+    vertical-align: middle;
 }
 
 .post-offer-wrapper .button-answer .button-text {
-    vertical-align: middle;
     padding: 0;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
  /* CHAT POST */
@@ -118,7 +126,7 @@
 
 .post-chat-item {
     position: relative;
-    padding: 4px 12px 2px 82px;
+    padding: 4px 12px 2px 68px;
     margin-bottom: 8px;
 }
 
@@ -138,6 +146,11 @@
 }
 
 @media screen and (min-width: 768px) {
+
+    .post-chat-item {
+        padding: 4px 12px 2px 80px;
+    }
+
     .post-chat-item .avatar {
         left: 18px;
     }
@@ -178,15 +191,16 @@
     width: 100%;
     padding: 10px 30px;
     font-size: 1.2em;
-    color: #777;
     text-align: center;
+    
 }
 
 .chat-thread .button-show-more > button {
-    border: 1px solid #f949b6;
-    border-radius: 30px;
+    border-radius: 5px;
     padding: 3px;
     width: 100%;
+    background: #3897F0 !important;
+    color: #fff;
 }
 
 /*USER THREAD*/
@@ -254,17 +268,24 @@
 }
 
 .post-user-item .buttons .button {
-    border: 1px solid #ddd;
-    border-radius: 30px;
-    padding: 0 30px;
+    border: 1px solid #fff;
+    border-radius: 5px;
+    padding: 2px 10px;
     margin: 0 10px 0 0;
+    outline: none !important;
+    transition: all .2s ease-in-out;
 }
 
-.post-user-item .buttons .button:hover {
-    border-color: #f949b6;
+.post-user-item .buttons .button-message {
+    background: #3897F0;
+    color: #fff;
 }
 
-
+.post-user-item .buttons .button.button-follow {
+    border-color: #fff;
+    background: #fff;
+    color: #f949b6;
+}
 
 span.hashtag {
     color: #f949b6;
