--- a/frontend/src/components/Page404/Page404.css
+++ b/frontend/src/components/Page404/Page404.css
@@ -1,11 +1,9 @@
 .page-404 {
-    width: 100%;
-    min-height: 300px;
-    display: flex;
-}
+  width: 100%;
+  min-height: 300px;
+  display: flex; }
 
 .page-404__text {
-    font-size: 1.6em;
-    margin: auto;
-    color: #777;
-}
+  font-size: 1.6em;
+  margin: auto;
+  color: #777; }
